--- a/src/pages/home/simply/Simply.scss
+++ b/src/pages/home/simply/Simply.scss
@@ -77,4 +77,223 @@
       left: 40px;
     }
   }
+  @media (max-width: 1100px) {
+    &__top {
+      h2 {
+        max-width: 443px;
+        font-size: 52px;
+      }
+      p {
+        max-width: 353px;
+        font-size: 16px;
+      }
+    }
+    &__card__left {
+      position: relative;
+      grid-column: span 6;
+      grid-row: span 10;
+      background: url("../../../assets/home/left-card.png") center/cover;
+      &__item {
+        position: absolute;
+        top: 40px;
+        left: 40px;
+      }
+    }
+    &__card__right__top {
+      position: relative;
+      grid-column: span 6;
+      grid-row: span 5;
+      background: url("../../../assets//home/right-top.png") top/cover no-repeat;
+      &__item {
+        position: absolute;
+        bottom: 40px;
+        left: 40px;
+      }
+    }
+    &__card__right__bottom {
+      grid-column: span 6;
+      position: relative;
+      grid-row: span 5;
+      background: url("../../../assets//home/right-bottom.png") top/cover
+        no-repeat;
+      &__item {
+        position: absolute;
+        bottom: 40px;
+        left: 40px;
+      }
+    }
+  }
+  @media (max-width: 900px) {
+    &__top {
+      padding: 30px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      h2 {
+        max-width: 343px;
+        font-size: 42px;
+      }
+      p {
+        max-width: 253px;
+        font-size: 14px;
+      }
+    }
+    &__card__left {
+      position: relative;
+      grid-column: span 6;
+      grid-row: span 6;
+      background: url("../../../assets/home/left-card.png") center/cover;
+      &__item {
+        position: absolute;
+        top: 40px;
+        left: 40px;
+      }
+    }
+    &__card__right__top {
+      position: relative;
+      grid-column: span 6;
+      grid-row: span 3;
+      background: url("../../../assets//home/right-top.png") top/cover no-repeat;
+      &__item {
+        position: absolute;
+        bottom: 40px;
+        left: 40px;
+      }
+    }
+    &__card__right__bottom {
+      grid-column: span 6;
+      position: relative;
+      grid-row: span 3;
+      background: url("../../../assets//home/right-bottom.png") top/cover
+        no-repeat;
+      &__item {
+        position: absolute;
+        bottom: 40px;
+        left: 40px;
+      }
+    }
+  }
+  @media (max-width: 700px) {
+    &__top {
+      padding: 30px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      h2 {
+        max-width: 343px;
+        font-size: 32px;
+      }
+      p {
+        max-width: 253px;
+        font-size: 14px;
+      }
+    }
+    &__card__left {
+      position: relative;
+      grid-column: span 12;
+      grid-row: span 4;
+      background: url("../../../assets/home/left-card.png") center/cover;
+      &__item {
+        position: absolute;
+        top: 40px;
+        left: 40px;
+      }
+    }
+    &__card__right__top {
+      position: relative;
+      grid-column: span 12;
+      grid-row: span 4;
+      background: url("../../../assets//home/right-top.png") top/cover no-repeat;
+      &__item {
+        position: absolute;
+        bottom: 40px;
+        left: 40px;
+      }
+    }
+    &__card__right__bottom {
+      grid-column: span 12;
+      position: relative;
+      grid-row: span 4;
+      background: url("../../../assets//home/right-bottom.png") top/cover
+        no-repeat;
+      &__item {
+        position: absolute;
+        bottom: 40px;
+        left: 40px;
+      }
+    }
+  }
+  @media (max-width: 600px) {
+    &__top {
+      padding: 30px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      h2 {
+        max-width: 343px;
+        font-size: 25px;
+      }
+      p {
+        max-width: 203px;
+        font-size: 12px;
+      }
+    }
+  }
+  @media (max-width: 500px) {
+    &__top {
+      padding: 30px 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      h2 {
+        max-width: 303px;
+        font-size: 20px;
+      }
+      p {
+        max-width: 153px;
+        font-size: 12px;
+      }
+    }
+
+    &__card__left {
+      position: relative;
+      grid-column: span 12;
+      grid-row: span 4;
+      background: url("../../../assets/home/left-card.png") center/cover;
+      &__item {
+        position: absolute;
+        top: 20px;
+        left: 20px;
+      }
+    }
+    &__card__right__top {
+      position: relative;
+      grid-column: span 12;
+      grid-row: span 4;
+      background: url("../../../assets//home/right-top.png") top/cover no-repeat;
+      &__item {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+      }
+    }
+    &__card__right__bottom {
+      grid-column: span 12;
+      position: relative;
+      grid-row: span 4;
+      background: url("../../../assets//home/right-bottom.png") top/cover
+        no-repeat;
+      &__item {
+        position: absolute;
+        bottom: 20px;
+        left: 20px;
+      }
+    }
+  }
+  @media (max-width: 400px) {
+    &__cards {
+      height: 700px;
+      gap: 10px;
+    }
+  }
 }
