--- a/src/components/cardItem/CardItem.scss
+++ b/src/components/cardItem/CardItem.scss
@@ -29,4 +29,35 @@
     font-weight: 500;
     color: #6c7275;
   }
+  @media (max-width: 1050px) {
+    &__img {
+      width: 200px;
+      height: 200px;
+      img {
+        width: 100%;
+        height: 80%;
+        object-fit: contain;
+      }
+    }
+    h3 {
+      font-size: 16px;
+    }
+    &__price {
+      font-size: 14px;
+    }
+    &__old__price {
+      font-size: 12px;
+    }
+  }
+  @media (max-width: 550px) {
+    &__img {
+      width: 150px;
+      height: 150px;
+      img {
+        width: 100%;
+        height: 80%;
+        object-fit: contain;
+      }
+    }
+  }
 }
