--- a/src/components/layout/footer/Footer.scss
+++ b/src/components/layout/footer/Footer.scss
@@ -9,21 +9,27 @@ footer {
     padding: 50px 0;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     align-items: center;
     &__left {
       display: flex;
+
       align-items: center;
-      gap: 10px;
+      flex-wrap: wrap;
+      gap: 30px;
     }
   }
   &__list {
     display: flex;
+    flex-wrap: wrap;
     gap: 10px;
   }
   &__bottom {
     border-top: 2px solid #6c7275;
     padding: 20px 0;
     display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
     justify-content: space-between;
     &__left {
       display: flex;
