--- a/src/components/layout/header/Header.scss
+++ b/src/components/layout/header/Header.scss
@@ -36,6 +36,19 @@ header {
   background: #fff;
   z-index: 999;
 }
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #dfeed63e;
+  cursor: pointer;
+}
+.overlay-show {
+  display: block;
+}
 .header {
   &__container {
     display: flex;
@@ -47,10 +60,28 @@ header {
     font-size: 24px;
     font-weight: 500;
     font-family: "Poppins", sans-serif;
+    display: flex;
+    gap: 5px;
+    button {
+      border: none;
+      background: transparent;
+      font-size: 20px;
+      display: none;
+    }
+  }
+  &__main {
+    width: 60%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
   }
   &__list {
+    width: 100%;
     display: flex;
     gap: 20px;
+    &__show {
+      left: 0;
+    }
     li {
       color: #6c7275;
       transition: 0.3s;
@@ -60,10 +91,110 @@ header {
         color: #141718;
       }
     }
+    &__top {
+      display: flex;
+      justify-content: space-between;
+      display: none;
+    }
   }
+  &__right {
+    display: flex;
+    gap: 10px;
+    font-size: 20px;
+    display: none;
+  }
+
   &__items {
     display: flex;
+    position: relative;
     gap: 20px;
+    align-items: center;
     font-size: 20px;
+    button {
+      border: none;
+      background: none;
+      font-size: 20px;
+    }
+    &__input {
+      position: absolute;
+      background: #fff;
+      top: -50%;
+      left: -250%;
+      display: flex;
+      align-items: center;
+      border: 2px solid #6c7275;
+      padding: 5px;
+      gap: 10px;
+      input {
+        padding: 5px;
+        width: 300px;
+        outline: none;
+        border: none;
+      }
+      @media (max-width: 750px) {
+        left: -220%;
+        input {
+          width: 250px;
+        }
+      }
+    }
   }
+
+  @media (max-width: 850px) {
+    &__main {
+      width: 70%;
+    }
+  }
+  @media (max-width: 650px) {
+    &__logo {
+      align-items: center;
+      button {
+        display: flex;
+      }
+    }
+    &__right {
+      display: flex;
+    }
+    &__list__top {
+      display: flex;
+      button {
+        border: none;
+        background: none;
+        font-size: 20px;
+      }
+    }
+    &__main {
+      position: fixed;
+      top: 0;
+      width: 70%;
+      height: 100vh;
+      left: -100%;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 20px;
+      background: #fff;
+      transition: 0.5s;
+    }
+    &__list {
+      flex-direction: column;
+      li {
+        border-bottom: 1px solid #34383926;
+        padding-bottom: 5px;
+      }
+    }
+    &__items__input__btn {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .header__top {
+    &__main {
+      font-size: 8px;
+    }
+  }
+}
+.show {
+  left: 0;
 }
