--- a/src/pages/home/about/About.scss
+++ b/src/pages/home/about/About.scss
@@ -1,20 +1,34 @@
 .about {
   &__cards {
     padding: 40px 0;
-    display: flex;
-    gap: 30px;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
   }
   &__card {
-    width: 23%;
-    height: 180px;
-    padding: 30px 40px;
+    padding: 30px 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
     background: #f3f5f7;
     img {
       width: 48px;
+    }
+  }
+  @media (max-width: 950px) {
+    &__card {
+      padding: 20px 15px;
+      img {
+        width: 37px;
+      }
+    }
+  }
+  @media (max-width: 700px) {
+    &__cards {
+      padding: 40px 0;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 30px;
     }
   }
 }
