--- a/src/pages/home/articles/Articles.scss
+++ b/src/pages/home/articles/Articles.scss
@@ -34,4 +34,39 @@
       }
     }
   }
+  @media (max-width: 500px) {
+    &__top {
+      padding: 30px 0;
+      h2 {
+        font-size: 30px;
+        font-weight: 500;
+        font-family: "Poppins", sans-serif;
+      }
+    }
+    button {
+      font-size: 14px;
+      width: 120px;
+    }
+
+    &__cards {
+      flex-direction: column;
+      gap: 20px;
+      justify-content: center;
+      align-items: center;
+      &__card {
+        width: 70%;
+      }
+    }
+  } 
+  @media (max-width: 400px) {
+    &__cards {
+      flex-direction: column;
+      gap: 20px;
+      justify-content: center;
+      align-items: center;
+      &__card {
+        width: 90%;
+      }
+    }
+  }
 }
