--- a/src/pages/home/hero/Hero.scss
+++ b/src/pages/home/hero/Hero.scss
@@ -2,5 +2,23 @@
   &__img {
     width: 100%;
     height: 600px;
+    @media (max-width: 1050px) {
+      height: 500px;
+    }
+    @media (max-width: 850px) {
+      height: 400px;
+    }
+    @media (max-width: 750px) {
+      height: 300px;
+    }
+    @media (max-width: 550px) {
+      height: 250px;
+    }
+    @media (max-width: 450px) {
+      height: 200px;
+    }
+    @media (max-width: 350px) {
+      height: 150px;
+    }
   }
 }
