--- a/src/components/newsletter/Newsletter.scss
+++ b/src/components/newsletter/Newsletter.scss
@@ -2,9 +2,8 @@
   background: url("../../assets/home/newsletter.png") center no-repeat;
   background-size: cover;
   height: 400px;
-
+  margin-top: 50px;
   padding: 100px 0;
-  margin: 50px auto;
   text-align: center;
   &__input {
     padding: 20px;
