--- a/src/components/cardItem/CardItem.scss
+++ b/src/components/cardItem/CardItem.scss
@@ -1,13 +1,44 @@
 .product__item {
   display: flex;
   flex-direction: column;
+  gap: 10px;
   &__img {
-    width: 200px;
-    height: 250px;
+    position: relative;
+    overflow: hidden;
+    width: 250px;
+    height: 240px;
+    transition: 0.4s;
     img {
       width: 100%;
-      height: 80%;
+      height: 100%;
       object-fit: contain;
+    }
+    &__like__btn {
+      position: absolute;
+      top: 10px;
+      right: -100%;
+      border: none;
+      background: #fff;
+      color: #6c7275;
+      padding: 5px 7px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      box-shadow: 0, 8, 16, -8 #0f0f0f;
+      transition: 0.5s ease;
+    }
+    &__add-cart__btn {
+      position: absolute;
+      transition: 0.5s ease;
+      bottom: -100%;
+      left: 10px;
+      width: 90%;
+      padding: 8px;
+      border-radius: 5px;
+      color: #fff;
+      background: #141718;
+      border: none;
     }
   }
 
@@ -17,6 +48,14 @@
     gap: 8px;
   }
 
+  &__title {
+    font-size: 18px;
+    width: 80%;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+  }
   &__prices {
     display: flex;
     gap: 10px;
@@ -31,6 +70,7 @@
     font-weight: 500;
     color: #6c7275;
   }
+
   @media (max-width: 1050px) {
     &__img {
       width: 200px;
@@ -61,5 +101,14 @@
         object-fit: contain;
       }
     }
+  }
+}
+
+.product__item:hover {
+  .product__item__img__like__btn {
+    right: 10px;
+  }
+  .product__item__img__add-cart__btn {
+    bottom: 10px;
   }
 }
