--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,8 @@ button{
   max-width: 1600px;
 }
 .container{
-  width: 85%;
+  width: 100%;
   margin: 0 auto;
-  max-width: 1440px;
+  padding: 0 40px;
+  max-width: 1152px;
 }
