--- a/src/pages/SinglePage/SinglePage.scss
+++ b/src/pages/SinglePage/SinglePage.scss
@@ -13,7 +13,7 @@
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
     &__images {
@@ -24,6 +24,7 @@
         img {
           width: 100%;
           height: 100%;
+          object-fit: contain;
         }
       }
     }
