--- a/src/pages/Favorites/Favorites.scss
+++ b/src/pages/Favorites/Favorites.scss
@@ -122,3 +122,21 @@
     }
   }
 }
+
+.empty {
+  min-height: 430px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  img {
+    width: 30%;
+  }
+  a {
+    padding: 10px;
+    background: #ced4d6;
+    color: #fff;
+    border-radius: 10px;
+  }
+}
