--- a/src/components/layout/header/Header.scss
+++ b/src/components/layout/header/Header.scss
@@ -36,6 +36,20 @@ header {
   background: #fff;
   z-index: 999;
 }
+.header__nav {
+  position: relative;
+  span {
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 10px;
+    font-weight: 600;
+    padding: 3px 8px;
+    background: #343839;
+    color: #fff;
+    border-radius: 50%;
+  }
+}
 .overlay {
   display: none;
   position: fixed;
