--- a/src/pages/SinglePage/SinglePage.scss
+++ b/src/pages/SinglePage/SinglePage.scss
@@ -17,10 +17,11 @@
       }
     }
     &__images {
-      display: flex;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
       gap: 30px;
       &__img {
-        width: 30%;
+        width: 100%;
         img {
           width: 100%;
           height: 100%;
